--- a/index.html
+++ b/index.html
@@ -9,15 +9,32 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <link rel="stylesheet" href="map.css">
   <!-- Load Mapbox GL JS -->
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  
-  <!-- Load your custom map initialization script -->
-  <script src="map.js"></script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>  
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <title>Bikewatching</title>
 </head>
 <body>
-  <h1>🚴🏼‍♀️ Bikewatching</h1>
-  <div id="map"></div>
+  <header>
+    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <label>
+      <div>
+        Filter by time:
+        <input type="range" id="time-slider" min="-1" max="1440" value="-1">
+      </div>
+      <em id="any-time">(any time)</em>
+      <time id="selected-time"></time>
+    </label>
+  </header>
 
+  <div id="map">
+    <svg></svg>
+  </div>
+  <script src="map.js"></script>
+
+  <div class="legend">
+    <div style="--departure-ratio: 1">More departures</div>
+    <div style="--departure-ratio: 0.5">Balanced</div>
+    <div style="--departure-ratio: 0">More arrivals</div>
+  </div>
 </body>
 </html>
